--- a/backend/frontend/src/index.css
+++ b/backend/frontend/src/index.css
@@ -77,7 +77,7 @@ a {
 }
 
 .container{
-    max-width: 1024px;
+    max-width: 1224px;
     margin: auto;
 }
 
@@ -171,8 +171,8 @@ table{
 }
 
 .table .thead-dark th{
-    color: #fff;
-    background-color: var(--dark) ;
+    color: rgb(246, 242, 242);
+    background-color:rgba(48, 47, 47, 0.6) ;
     border-color: #32383e;
 }
 
@@ -289,3 +289,4 @@ table{
     background-color: var(--dark);
     color: var(--border);
 }
+
