--- a/backend/frontend/src/pages/CreatePost.css
+++ b/backend/frontend/src/pages/CreatePost.css
@@ -20,8 +20,10 @@
 
 .side-menu {
     position: fixed !important;
-    background:rgb(185, 168, 143) !important;
-    width: 300px !important;
+    
+    background:rgba(215, 183, 135, 0.5) !important;
+
+    width: 250px !important;
     height: 100% !important;
     text-align: justify !important;
     margin-top: 0px !important;
@@ -37,6 +39,7 @@
 }
 
 .side-menu .main-menu .menu-item.active {
+  
     background: #666 !important;
     border-radius: 5px !important;
     color: #fff !important;
@@ -47,6 +50,7 @@
 }
 
 .side-menu .main-menu .menu-item .menu-icon {
+
     display: inline-block !important;
     width: 40px !important;
     height: 40px !important;
@@ -92,7 +96,7 @@
 
 .side-menu-footer {
     width: 100% !important;
-    background: #32383e !important;
+    background: rgba(48, 47, 47, 0.707) !important;
     position: absolute !important;
     bottom: 0 !important;
     left: 0 !important;
@@ -103,7 +107,7 @@
 .side-menu-footer .user-info {
     float: left !important;
     margin: 0 10px !important;
-    color: #fff !important;
+    color: rgb(247, 236, 225) !important;
 
 }
 
@@ -114,4 +118,5 @@
 
 .side-menu-footer .logout {
     float: right !important;
+   
 }
