--- a/backend/frontend/src/pages/Type_dossier.css
+++ b/backend/frontend/src/pages/Type_dossier.css
@@ -1,3 +1,17 @@
 .page {
-    margin-left: 300px !important;
+    margin-left: 260px !important;
+    margin-right: 10px;
 }
+
+
+.app video {
+    position: fixed;
+    object-fit: cover;
+    box-sizing: content-box;
+    z-index: -1;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+}
+
