--- a/backend/frontend/src/pages/CreatePost.css
+++ b/backend/frontend/src/pages/CreatePost.css
@@ -1,3 +1,8 @@
+.image {
+    height: 130px;
+    width: 130px;
+}
+
 .side-menu {
     position: fixed !important;
     background: rgba(215, 183, 135, 0.5) !important;
@@ -5,6 +10,7 @@
     height: 100% !important;
     text-align: justify !important;
     margin-top: 0px !important;
+
 }
 
 .side-menu .main-menu .menu-item {
